--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
         <canvas id="canvas" width="200" height="50"></canvas>
         <div class="content">hello world</div>
     </div>
-    <script type="text/javascript" src='erase.js'></script>
+    <script type="text/javascript" src='image_fly.js'></script>
     <script type="text/javascript">
     erase('canvas');
     </script>
