--- a/index.html
+++ b/index.html
@@ -1,5 +1,16 @@
 <html>
 <head>
+    <style type="text/css">
+
+
+        h1 {background-color: #00ff00}
+        h2 {background-color: transparent}
+        p {background-color: rgb(250,0,255)}
+
+        p.no2 {background-color: gray; padding: 20px;}
+
+    </style>
+
     <meta charset="utf-8">
     <style type="text/css">
     .container{
@@ -19,7 +30,14 @@
 </head>
 
 <body>
-    <script type="text/javascript" src='image_fly.js'></script>
+    <!--<script type="text/javascript" src='image_fly.js'></script>-->
+    <style type="text/css">
+        <!--
+        @import url(sprites.css);/*这里是通过@import引用CSS的样式内容*/
+        -->
+
+    </style>
+    <image1>这是标题 1</image1>
 </body>
 
 </html> 
