--- a/index.html
+++ b/index.html
@@ -30,14 +30,23 @@
 </head>
 
 <body>
-    <!--<script type="text/javascript" src='image_fly.js'></script>-->
-    <style type="text/css">
-        <!--
-        @import url(sprites.css);/*这里是通过@import引用CSS的样式内容*/
-        -->
+    <script type="text/javascript" src='image_fly.js'></script>
 
-    </style>
-    <image1>这是标题 1</image1>
+    <!--<style type="text/css">-->
+        <!--&lt;!&ndash;-->
+        <!--@import url(sprites.css);/*这里是通过@import引用CSS的样式内容*/-->
+        <!--&ndash;&gt;-->
+
+    <!--</style>-->
+    <!--<sprite>-->
+        <!--<img id="img1" src="./images/1.png"/>-->
+    <!--</sprite>-->
+
+    <!--<canvas id="myCanvas" width="1000" height="800">-->
+
+    <!--</canvas>-->
+
+
 </body>
 
 </html> 
