--- a/index.html
+++ b/index.html
@@ -1,16 +1,5 @@
 <html>
 <head>
-    <style type="text/css">
-
-
-        h1 {background-color: #00ff00}
-        h2 {background-color: transparent}
-        p {background-color: rgb(250,0,255)}
-
-        p.no2 {background-color: gray; padding: 20px;}
-
-    </style>
-
     <meta charset="utf-8">
     <style type="text/css">
     .container{
@@ -30,21 +19,19 @@
 </head>
 
 <body>
+    <style type="text/css">
+        <!--
+        @import url(sprites.css);/*这里是通过@import引用CSS的样式内容*/
+        -->
+
+    </style>
+    <sprite>
+        <img id="img1" src="./images/1.png"/>
+    </sprite>
+
+    <canvas id="appCanvas" width="100" height="100">
+    </canvas>
     <script type="text/javascript" src='image_fly.js'></script>
-
-    <!--<style type="text/css">-->
-        <!--&lt;!&ndash;-->
-        <!--@import url(sprites.css);/*这里是通过@import引用CSS的样式内容*/-->
-        <!--&ndash;&gt;-->
-
-    <!--</style>-->
-    <!--<sprite>-->
-        <!--<img id="img1" src="./images/1.png"/>-->
-    <!--</sprite>-->
-
-    <!--<canvas id="myCanvas" width="1000" height="800">-->
-
-    <!--</canvas>-->
 
 
 </body>
