--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 </head>
 
 <body>
-
+<embed src="bgm/bgm.mp3" autostart="true" loop="true" hidden="true"></embed>
     <canvas id="appCanvas" width="100" height="100">
     </canvas>
     <script type="text/javascript" src='image_fly.js'></script>
